# emulandice2

./: CHANGELOG.md  Dockerfile  README.md  justfile  pyproject.toml
scripts/: main.R
src/emulandice2/: AssignFP.py  __init__.py  cli.py  emulandice_postprocess.py  emulandice_project.py  read_locationfile.py
